# dijkstra-steiner-algorithm

./: CMakeLists.txt  README.md  compile.sh
gnuplot/: plot_2d_steiner_tree  plot_3d_steiner_tree
instances/: i10_reduced.sdtg  i20_reduced.sdtg  test
source/: DijkstraSteinerAlgorithm.hpp  Direction3d.hpp  HananGrid3d.hpp  Output.cpp  Output.hpp  Point3d.hpp  SteinerTree3d.hpp  SteinerTreeKey.hpp  SteinerTreeLabel.hpp  SteinerTreeLabelQueue.hpp  SteinerTreeLabelTable.hpp  SteinerTreeLowerBound.hpp  SteinerTreesManager.hpp  VectorHelper.hpp  debug.hpp  dijkstra_steiner_algorithm.cpp  dijkstra_steiner_algorithm.hpp  main.cpp
unit_test/: test_BitSetEnumerator.cpp  test_HananGrid3.cpp  test_dijkstra_steiner_algorithm.cpp  test_instances.cpp
